# cfind

./: AGENTS.md  Cargo.toml  README.md
src/: config.rs  git.rs  index.rs  language.rs  lib.rs  main.rs  search.rs
src/language/: csharp.rs  javascript.rs  mod.rs  rust.rs  typescript.rs
tests/: cli.rs  workspaces.rs
