[package]
name = "cfind"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
regex = "1.13"
rusqlite = { version = "0.37", features = ["bundled"] }
strsim = "0.11"
tree-sitter = "0.25"
tree-sitter-c-sharp = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.20"
